--- a/about.html
+++ b/about.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -40,19 +40,18 @@
 
     <!--Hero-->
 
-      <div id="hero">
-        <div class="container">
-          <h1>Know me better</h1>
+        <div id="hero">
+        <div class="section home">
+                  <div class="container">
+                              <h1>About me.</h1>
+                                <img src="img/whiteheart.svg" alt="whiteheart" width="100" height="100">
+                    </div>
         </div>
-      </div>
+
       <div class="section">
         <div class="container">
           <div class="row story">
             <div class="column col-md-6">
-              <h2>A bit of background</h2>
-              <p>
-                Hello! I'm an Industrial Designer and UX / UI.
-              </p>
 
               <p>
                 My passion is coming up with creative ways to express a message, and providing solutions for complex tasks. I'm a huge fan of technology and discovering new programs that help us to make life easier. My past as an industrial designer
@@ -91,7 +90,7 @@
                 <li>Product handling</li>
                 <li>User research (Competitor SWOT Analysis, Usability Heuristics, User flow)</li>
                 <li>User Interface Design (Iterative Design, Sketching, Wireframing, Prototyping)</li>
-                        <li>A / B Preference Testing</li>
+                <li>A / B Preference Testing</li>
               </ul>
             </div>
 
@@ -120,34 +119,34 @@
       </div>
 
       <!-- end work/projects -->
-    </main>
+  </main>
 
-    <!--Footer-->
-    <footer>
-      <div class="container">
-        <div class="navtoggle" id="myNavtoggle">
-          <h2>Get in Touch</h2>
-          <p>
-            Did you like my work and do you want to contact me? Please do so through:
-          </p>
+  <!--Footer-->
+  <footer>
+    <div class="container">
+      <div class="navtoggle" id="myNavtoggle">
+        <h2>Get in Touch</h2>
+        <p>
+          Did you like my work and do you want to contact me? Please do so through:
+        </p>
 
-          <!--Social Media Links-->
-          <div id="contact">
-            <div class="social">
-              <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-            </div>
-            <div class="social">
-              <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-              <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-              <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-            </div>
-
-            <p>Copyright Maronese Paula 2020</p>
+        <!--Social Media Links-->
+        <div id="contact">
+          <div class="social">
+            <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
           </div>
-    </footer>
-    <!--End Footer-->
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-    <script src="js/scripts.js"></script>
+          <div class="social">
+            <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+            <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+          </div>
+
+          <p>Copyright Maronese Paula 2020</p>
+        </div>
+  </footer>
+  <!--End Footer-->
+  <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+  <script src="js/scripts.js"></script>
 </body>
 
 </html>
