--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Special+Elite&display=swap" rel="stylesheet">
 
 </head>
 
@@ -41,12 +43,10 @@
     <div id="hero">
       <div class="section home">
                 <div class="container">
-          <h1>Hello!
-            <span>I’m Paula</span>
-          </h1>
-          <p>
-            I'm Industrial & UX/UI designer who creates digital products with knowledge and passion.
-          </p>
+                            <h1>Hello.</h1>
+          <h5>
+            I create digital products with knowledge and passion.
+        </h5>
         </div>
       </div>
       <!--End Hero-->
@@ -54,24 +54,14 @@
       <!--Work-->
       <div class="work" id="work">
         <div class="container">
-          <h2>My Work</h2>
-          <div class="row">
-            <div class="col-md-6 col-lg-7">
-              <img src="img/summitbank/summitbank.png" alt="Summit Muckup">
-            </div>
-            <div class="col-md-6 col-lg-5">
-              <h3>A bank app: Summit</h3>
-              <p>
-                This was the last application that I designed for the CareerFoundry UI course, without a doubt it was the most complete as it covered each of my skills.
-              </p>
-              <a href="summitbank.html" class="button readmore">Read More</a>
-            </div>
-          </div>
+    <img src="img/heart.svg" alt="heart" width="80" height="80">
+          <h4>I'm industrial designer and UX / UI,    living in Munich. </h4>
+
 
 
           <div class="row">
             <div class="col-md-6 col-lg-7">
-              <img src="img/must-go@2.png" alt="Mustgo Muckup">
+              <img src="img/travelapp/travelapp.png" alt="Mustgo Muckup">
             </div>
             <div class="col-md-6 col-lg-5">
               <h3>A travel app: MustGo</h3>
@@ -86,7 +76,7 @@
 
           <div class="row">
             <div class="col-md-6 col-lg-7">
-              <img src="img/meridean-app.png" alt="Meridean Muckup">
+              <img src="img/musicapp/musicapp.png" alt="Meridean Muckup">
             </div>
             <div class="col-md-6 col-lg-5">
               <h3>A Music app: Meridian!</h3>
@@ -98,8 +88,20 @@
           </div>
 
           <div class="row">
+        <div class="col-md-6 col-lg-7">
+          <img src="img/summitbank/bankapp.png" alt="Summit Muckup">
+        </div>
+        <div class="col-md-6 col-lg-5">
+          <h3>A bank app: Summit</h3>
+          <p>
+            This was the last application that I designed for the CareerFoundry UI course, without a doubt it was the most complete as it covered each of my skills.
+          </p>
+          <a href="summitbank.html" class="button readmore">Read More</a>
+        </div>
+      </div>
+          <div class="row">
             <div class="col-md-6 col-lg-7">
-              <img src="img/powapp/powapp.png" alt="PowApp Muckup">
+              <img src="img/sportapp/sportapp.png" alt="PowApp Muckup">
             </div>
             <div class="col-md-6 col-lg-5">
               <h3>A sport app: Pow!</h3>
@@ -122,8 +124,7 @@
 
       <div class="animation">
         <div class="container">
-          <h2>A Berlin animation</h2>
-          <div class="row">
+                  <div class="row">
             <div class="col-md-6 col-lg-7">
               <svg xmlns="http://www.w3.org/2000/svg" class="berlin-illustration" viewBox="0 0 700 505" xmlns:xlink="http://www.w3.org/1999/xlink">
                 <defs>
@@ -1065,7 +1066,7 @@
               </svg>
             </div>
             <div class="col-md-6 col-lg-5">
-              <h3>The Brandenburg Gate</h3>
+              <h3>Testing applying motion to SVG</h3>
               <p>
                 Is a former gateway to Berlin and one of the main symbols of both the city and Germany. It is not a triumphal arch, but was the access, by way of propylae, to the "New Berlin" of the time. </p>
             </div>
