--- a/summitbank.html
+++ b/summitbank.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/favicon-32x32.png" sizes="32x32" />
-  <link rel="icon" type="image/png" href="img/favicon-16x16.png" sizes="16x16" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -18,14 +18,13 @@
 <body>
 
   <!--Header-->
-  <!--Header-->
   <header>
     <div class="container">
       <div class="navtoggle" id="myNavtoggle">
         <a href="index.html"><img src="img/logopm.png" class="logo"></a>
         <nav>
           <ul>
-            <li><a href="index.html">Work</a></li>
+            <li><a href="index.html" class="active">Work</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="#contact" onclick="menuToggle()">Contact</a></li>
             <li><a href="javascript:void(0);" class="icon" onclick="menuToggle()"><i class="fas fa-bars"></i></a></li>
@@ -36,15 +35,15 @@
   </header>
   <!--End Header-->
 
-
   <main>
 
     <!--Hero-->
     <div class="section">
       <div class="container">
-        <h1>Summit bank;
-          <span>a bank account so save and beyond.</span>
-        </h1>
+        <div class="section home">
+          <h1>Summit bank; </h1>
+          <h2>your way to success.</h2>
+        </div>
         <p>
           Our mission: Help clients save money, invest correctly, and organize their finances.
         </p>
@@ -57,65 +56,65 @@
           for whatever you want, "hiding" it from your card!
         </p>
       </div>
-    </div>
 
-    <div class="section">
-      <div class="container">
-        <h3>A little bit about the process</h3>
-        <div class="row">
-          <div class="column">
-            <img src="img/summitbank/first.png">
-          </div>
-          <div class="column">
-            <h3>ABOUT</h3>
-            <p>
-              With this application costumers can save in a simple way, selecting folders within their account for what they want and it will be blocked from their card being able to move the money between accounts as many times as wanted.
-            </p>
-            <h3>PROJECT GOAL</h3>
-            <p>
-              Help our users to pursue the life they dreamed of so much, the most desired trip, their children's school, their future home!
-            </p>
-            <h3>PLATAFORMS</h3>
-            <p>
-              You can find us on the web from your computer or tablet, but our main objective is for you to carry us in your pocket, find us on iOS and Android.
-            </p>
-            <h3>DESIGN PROCESS</h3>
-            <img src="img/summitbank/bankprogress.png">
-            <p>
-              In order to provide the best possible service, an investigation of the existing applications was carried out first, that produced an idea that became a prototype. Tests were made to see its operation, obtaining opinions from potential
-              clients, which were mostly implemented.
-            </p>
-          </div>
-          <img src="img/summitbank/appgif.gif" class="gif">
-        </div>
-        <a href="https://www.behance.net/gallery/109165519/Summit-Bank-app" target="_blank">Read More</a>
-        <!--End Hero-->
-
-        <!--Footer-->
-        <footer>
-          <div class="container">
-            <h2>Get in Touch</h2>
-            <p>
-              Did you like my work and do you want to contact me? Please do so through:
-            </p>
-
-            <!--Social Media Links-->
-            <div id="contact">
-              <div class="social">
-                <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-              </div>
-              <div class="social">
-                <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-                <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-                <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-              </div>
-
-              <p>Copyright Maronese Paula 2020</p>
+      <div class="section">
+        <div class="container">
+          <h3>A little bit about the process</h3>
+          <div class="row">
+            <div class="column">
+              <img src="img/summitbank/first.png">
             </div>
-        </footer>
-        <!--End Footer-->
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-        <script src="js/scripts.js"></script>
+            <div class="column">
+              <h3>ABOUT</h3>
+              <p>
+                With this application costumers can save in a simple way, selecting folders within their account for what they want and it will be blocked from their card being able to move the money between accounts as many times as wanted.
+              </p>
+              <h3>PROJECT GOAL</h3>
+              <p>
+                Help our users to pursue the life they dreamed of so much, the most desired trip, their children's school, their future home!
+              </p>
+              <h3>PLATAFORMS</h3>
+              <p>
+                You can find us on the web from your computer or tablet, but our main objective is for you to carry us in your pocket, find us on iOS and Android.
+              </p>
+              <h3>DESIGN PROCESS</h3>
+              <img src="img/summitbank/bankprogress.png">
+              <p>
+                In order to provide the best possible service, an investigation of the existing applications was carried out first, that produced an idea that became a prototype. Tests were made to see its operation, obtaining opinions from potential
+                clients, which were mostly implemented.
+              </p>
+            </div>
+            <img src="img/summitbank/appgif.gif" class="gif">
+          </div>
+          <a href="https://www.behance.net/gallery/109165519/Summit-Bank-app" target="_blank">Read More</a>
+          <!--End Hero-->
+
+          <!--Footer-->
+          <footer>
+            <div class="container">
+              <h2>Get in Touch</h2>
+              <p>
+                Did you like my work and do you want to contact me? Please do so through:
+              </p>
+
+              <!--Social Media Links-->
+              <div id="contact">
+                <div class="social">
+                  <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
+                </div>
+                <div class="social">
+                  <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+                  <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+                  <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+                </div>
+
+                <p>Copyright Maronese Paula 2020</p>
+              </div>
+          </footer>
+          <!--End Footer-->
+          <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+          <script src="js/scripts.js"></script>
+
 </body>
 
 </html>
