--- a/travelapp.html
+++ b/travelapp.html
@@ -39,20 +39,20 @@
   <!--Footer-->
   <footer>
     <div class="container">
-      <h4>Get in Touch</h4>
+      <h2>Get in Touch</h2>
       <p>
         Did you like my work and do you want to contact me? Please do so through:
       </p>
 
       <!--Social Media Links-->
-        <div id="contact">
+      <div id="contact">
         <div class="social">
-          <a href="mailto:paula.maronese@gmail.com" class= "email">Email me</a>
+          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
         </div>
         <div class="social">
-          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
-          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
+          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
         <p>Copyright Maronese Paula 2020</p>
@@ -61,6 +61,7 @@
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+
 </body>
 
 
