--- a/sportapp.html
+++ b/sportapp.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Paula Maronese UX/UI</title>
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" "faviconimage32x32" sizes="32x32">
-  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" "faviconimage16x16" sizes="16x16">
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
+  <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
@@ -39,20 +39,20 @@
   <!--Footer-->
   <footer>
     <div class="container">
-      <h4>Get in Touch</h4>
+      <h2>Get in Touch</h2>
       <p>
         Did you like my work and do you want to contact me? Please do so through:
       </p>
 
       <!--Social Media Links-->
-      <div id="footer">
+      <div id="contact">
         <div class="social">
-          <a href="mailto:paula.maronese@gmail.com" class="email">Email me</a>
+          <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
         </div>
-        <div id="contact">
-          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="fab fa-linkedin"></i></a>
-          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="fab fa-facebook-square"></i></a>
-          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="fab fa-behance-square"></i></a>
+        <div class="social">
+          <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+          <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+          <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
         <p>Copyright Maronese Paula 2020</p>
@@ -61,6 +61,7 @@
   <!--End Footer-->
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="js/scripts.js"></script>
+
 </body>
 
 
