--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@
     <!--Work-->
     <div class="work" id="work">
       <div class="container">
-        <img src="img/heart.svg" alt="heart" width="80" height="80" id= "heart">
-        <h4>My name is Pau, I am Argentine and I currently live in Munich.
+        <img src="img/heart.svg" alt="heart" width="120" height="120" id= "heart">
+        <h4>I'm Pau, I am Argentine and I currently live in Munich.
           I studied Industrial Design and now I have expanded my field towards UX / UI
            ending with a specialization in Frontend for designers. </h4>
 
@@ -64,7 +64,7 @@
 
         <div class="row">
           <div class="col-md-6 col-lg-7">
-            <img src="img/travelapp/travelgif.gif" alt="Mustgo Muckup" id= "gifs" >
+            <img src="img/travelapp/travelindex.jpg" alt="Mustgo Muckup">
           </div>
           <div class="col-md-6 col-lg-5">
             <h3>A travel app: MustGo</h3>
@@ -78,7 +78,7 @@
 
         <div class="row reverse">
           <div class="col-md-6 col-lg-7">
-            <img src="img/musicapp/musicgif.gif" alt="Meridean Muckup">
+            <img src="img/musicapp/musicindex.jpg" alt="Meridean Muckup">
           </div>
           <div class="col-md-6 col-lg-5">
             <h3>A Music app: Meridian!</h3>
@@ -91,7 +91,7 @@
 
         <div class="row">
           <div class="col-md-6 col-lg-7">
-            <img src="img/summitbank/bankgif.gif" alt="Summit Muckup">
+            <img src="img/summitbank/bankindex.jpg" alt="Summit Muckup">
           </div>
           <div class="col-md-6 col-lg-5">
             <h3>A bank app: Summit</h3>
@@ -104,7 +104,7 @@
 
         <div class="row reverse">
           <div class="col-md-6 col-lg-7">
-            <img src="img/sportapp/sportgif.gif" alt="PowApp Muckup">
+            <img src="img/sportapp/sportindex.jpg" alt="PowApp Muckup">
           </div>
           <div class="col-md-6 col-lg-5">
             <h3>A sport app: Pow!</h3>
@@ -144,7 +144,7 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <p>Copyright Maronese Paula 2020</p>
+          <p>Copyright Maronese Paula 2021</p>
       </div>
     </div>
   </footer>
