--- a/summitbank.html
+++ b/summitbank.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/stylework.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -36,58 +36,8 @@
   <!--End Header-->
 
   <main>
+  <img src="img\summitbank\bankcase.png" class="img" alt="bankcase">
 
-    <!--Hero-->
-    <div class="section">
-      <div class="container">
-        <div class="section home">
-          <h1>Summit bank; </h1>
-          <h2>your way to success.</h2>
-        </div>
-        <p>
-          Our mission: Help clients save money, invest correctly, and organize their finances.
-        </p>
-        <p>
-          This is an online bank account, but not just any one. It is a personal account, designed for you, for the way you live today. With summit app, you will
-          receive instant notifications of your expenses, you can control how much you spend, where you spend it, and see your salary instantly.
-        </p>
-        <p>
-          We help you save: That's right, you will have accounts -in your account-, where you can set aside money
-          for whatever you want, "hiding" it from your card!
-        </p>
-      </div>
-
-      <div class="section">
-        <div class="container">
-          <h3>A little bit about the process</h3>
-          <div class="row">
-            <div class="column">
-              <img src="img/summitbank/first.png">
-            </div>
-            <div class="column">
-              <h3>ABOUT</h3>
-              <p>
-                With this application costumers can save in a simple way, selecting folders within their account for what they want and it will be blocked from their card being able to move the money between accounts as many times as wanted.
-              </p>
-              <h3>PROJECT GOAL</h3>
-              <p>
-                Help our users to pursue the life they dreamed of so much, the most desired trip, their children's school, their future home!
-              </p>
-              <h3>PLATAFORMS</h3>
-              <p>
-                You can find us on the web from your computer or tablet, but our main objective is for you to carry us in your pocket, find us on iOS and Android.
-              </p>
-              <h3>DESIGN PROCESS</h3>
-              <img src="img/summitbank/bankprogress.png">
-              <p>
-                In order to provide the best possible service, an investigation of the existing applications was carried out first, that produced an idea that became a prototype. Tests were made to see its operation, obtaining opinions from potential
-                clients, which were mostly implemented.
-              </p>
-            </div>
-            <img src="img/summitbank/appgif.gif" class="gif">
-          </div>
-          <a href="https://www.behance.net/gallery/109165519/Summit-Bank-app" target="_blank">Read More</a>
-          <!--End Hero-->
 
           <!--Footer-->
           <footer>
@@ -108,7 +58,7 @@
                   <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
                 </div>
 
-                <p>Copyright Maronese Paula 2020</p>
+  <p>Copyright Maronese Paula 2021</p>
               </div>
           </footer>
           <!--End Footer-->
