--- a/travelapp.html
+++ b/travelapp.html
@@ -9,7 +9,7 @@
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/stylework.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -35,6 +35,7 @@
   </header>
   <!--End Header-->
 
+  <img src="img\travelapp\travelcase.png" class="img" alt="travelcase">
 
   <!--Footer-->
   <footer>
@@ -55,7 +56,7 @@
           <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
         </div>
 
-        <p>Copyright Maronese Paula 2020</p>
+          <p>Copyright Maronese Paula 2021</p>
       </div>
   </footer>
   <!--End Footer-->
