--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
               As I progressed through the course, I dabbled in various application options that we all use on a daily basis and since I have been traveling around the world for as long as I have a notion, this was one of the applications that I
               liked doing the most.
             </p>
- <a href="travelapp.html" class="button readmore">Coming soon!</a>
+ <a href="travelapp.html" class="button readmore">Take a look!</a>
           </div>
         </div>
 
@@ -98,7 +98,7 @@
             <p>
               This was the last application that I designed for the CareerFoundry UI course, without a doubt it was the most complete as it covered each of my skills.
             </p>
-            <a href="summitbank.html" class="button readmore">Read More</a>
+            <a href="summitbank.html" class="button readmore">Take a look!</a>
           </div>
         </div>
 
@@ -112,7 +112,7 @@
               One of the tasks asked me to design an app about something that represents me, I chose a sports app because I am constantly trying new ones for myself, and I always find that I am not satisfied with just one, but two or three, I would
               choose the best functions and I would bring them together, and that's what I did here.
             </p>
-            <a href="sportapp.html" class="button readmore">Coming soon!</a>
+            <a href="sportapp.html" class="button readmore">Take a look!</a>
           </div>
         </div>
 
