--- a/sportapp.html
+++ b/sportapp.html
@@ -35,7 +35,7 @@
   </header>
   <!--End Header-->>
 
-  <img src="img\musicapp\sportcase.png" class="img" alt="sportcase">
+  <img src="img\sportapp\sportcase.png" class="img" alt="sportcase">
 
   <!--Footer-->
   <footer>
