--- a/summitbank.html
+++ b/summitbank.html
@@ -3,13 +3,13 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Paula Maronese UX/UI</title>
+  <title>Summit Bank</title>
   <link rel="icon" type="image/png" href="img/Favicon/favicon-32x32.png" sizes="32x32" />
   <link rel="icon" type="image/png" href="img/Favicon/favicon-16x16.png" sizes="16x16" />
   <script src="https://kit.fontawesome.com/8af5858c3f.js" crossorigin="anonymous"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="css/normalize.css">
-  <link rel="stylesheet" type="text/css" href="css/style.css">
+  <link rel="stylesheet" type="text/css" href="css/stylework.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Libre+Caslon+Text:ital,wght@0,400;0,700;1,400&family=Open+Sans&display=swap" rel="stylesheet">
 
@@ -35,86 +35,49 @@
   </header>
   <!--End Header-->
 
-  <main>
 
-    <!--Hero-->
-    <div class="section">
-      <div class="container">
-        <div class="section home">
-          <h1>Summit bank; </h1>
-          <h2>your way to success.</h2>
-        </div>
-        <p>
-          Our mission: Help clients save money, invest correctly, and organize their finances.
-        </p>
-        <p>
-          This is an online bank account, but not just any one. It is a personal account, designed for you, for the way you live today. With summit app, you will
-          receive instant notifications of your expenses, you can control how much you spend, where you spend it, and see your salary instantly.
-        </p>
-        <p>
-          We help you save: That's right, you will have accounts -in your account-, where you can set aside money
-          for whatever you want, "hiding" it from your card!
-        </p>
+    <div class="row module">
+      <div class="col-md-6 col-lg-7">
+        <img src="img/works/bankheader.png" alt"bank header">
       </div>
+      <div class="col-md-6 col-lg-5">
+        <h5>Project description</h5>
+        <h6>Problem</h6>
+      <p>dskjabdkabdskasd </p>
 
-      <div class="section">
-        <div class="container">
-          <h3>A little bit about the process</h3>
-          <div class="row">
-            <div class="column">
-              <img src="img/summitbank/first.png">
-            </div>
-            <div class="column">
-              <h3>ABOUT</h3>
-              <p>
-                With this application costumers can save in a simple way, selecting folders within their account for what they want and it will be blocked from their card being able to move the money between accounts as many times as wanted.
-              </p>
-              <h3>PROJECT GOAL</h3>
-              <p>
-                Help our users to pursue the life they dreamed of so much, the most desired trip, their children's school, their future home!
-              </p>
-              <h3>PLATAFORMS</h3>
-              <p>
-                You can find us on the web from your computer or tablet, but our main objective is for you to carry us in your pocket, find us on iOS and Android.
-              </p>
-              <h3>DESIGN PROCESS</h3>
-              <img src="img/summitbank/bankprogress.png">
-              <p>
-                In order to provide the best possible service, an investigation of the existing applications was carried out first, that produced an idea that became a prototype. Tests were made to see its operation, obtaining opinions from potential
-                clients, which were mostly implemented.
-              </p>
-            </div>
-            <img src="img/summitbank/appgif.gif" class="gif">
+
+    <h6>Solution</h6>
+  <p>dskjabdkabdskasd </p>
+  <a href="files/BankCase.pdf" download target=”_blank”>Full case PDF</a>
+      </div>
+    </div>
+
+
+    <!--Footer-->
+    <footer>
+      <div class="container module">
+        <h1>Let's work together.</h1>
+
+        <!--Social Media Links-->
+        <div id="contact">
+          <div class="social">
+            <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
           </div>
-          <a href="https://www.behance.net/gallery/109165519/Summit-Bank-app" target="_blank">Read More</a>
-          <!--End Hero-->
+          <div class="social">
+            <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
+            <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
+            <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
+          </div>
 
-          <!--Footer-->
-          <footer>
-            <div class="container">
-              <h2>Get in Touch</h2>
-              <p>
-                Did you like my work and do you want to contact me? Please do so through:
-              </p>
+          <h2>© 2021 Paula Maronese.       All rights reserved</h2>
 
-              <!--Social Media Links-->
-              <div id="contact">
-                <div class="social">
-                  <a href="mailto:paula.maronese@gmail.com" class="button emailme">Email me</a>
-                </div>
-                <div class="social">
-                  <a href="https://www.linkedin.com/in/paula-maronese/" target="_blank"> <i class="icon fab fa-linkedin"></i></a>
-                  <a href="https://www.facebook.com/Pau.maronese/" target="_blank"> <i class="icon fab fa-facebook-square"></i></a>
-                  <a href="https://www.behance.net/paulamaronese" target="_blank"><i class="icon fab fa-behance-square"></i></a>
-                </div>
+        </div>
+      </div>
+    </footer>
+    <!--End Footer-->
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="js/scripts.js"></script>
 
-                <p>Copyright Maronese Paula 2020</p>
-              </div>
-          </footer>
-          <!--End Footer-->
-          <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
-          <script src="js/scripts.js"></script>
+  </body>
 
-</body>
-
-</html>
+  </html>
